--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -61,6 +61,7 @@ body {
     &__bottom-img {
         width: 100%;
         height: 64px;
+        opacity: 0.96;
     }
 }
 
@@ -147,5 +148,78 @@ body {
         &:last-child{
             margin-right: 0;
         }
+    }
+}
+
+.promo {
+    position: relative;
+    min-height: 742px;
+    &__title {
+       font-size: 80px;
+       font-weight: 700;
+       line-height: 82px;
+       max-width: 785px; 
+       margin-top: 93px;
+       
+    }
+    &__text {
+        font-size: 18px;
+        line-height: 23px;
+        font-weight: 400;
+        max-width: 447px;
+        margin-top: 23px;
+    }
+    &__link {
+        display: block;
+        width: 150px;
+        margin-top: 34px;
+        border: 2px solid $yellow;
+        padding: 14px 31px;
+        font-size: 16px;
+        text-align: center;
+        text-transform: uppercase;
+    }
+    &__slider {
+        position: absolute;
+        left: 50%;
+        top: -120px;
+        max-width: 950px;
+        
+    }
+    &__slider-image {
+        // width: 967px !important;
+        z-index: -1;
+    }
+}
+
+.offers {
+    margin-top: -150px;
+    &__btns {
+        
+        display: flex;
+        justify-content: center;
+    }
+    &__btn {
+        font-size: 22px;
+        line-height: 23px;
+        text-transform: uppercase;
+        padding: 32px 30px;
+        background-color: rgba(244, 176, 43, 0.05);
+        border: none;
+        border-right: 1px solid rgba(244, 176, 43, 0.26);
+        z-index: 99;
+        cursor: pointer;
+        &:first-child {
+            border: none;
+            border-radius: 3px 0px 0px 3px;
+        }
+        &:last-child {
+            border: none;
+            border-radius: 0px 3px 3px 0px;
+        }
+    }
+    &__btn--active {
+        color: #fff;
+        background-color: $yellow;
     }
 }
