--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -42,12 +42,14 @@ body {
 	padding: 22px 27px;
 	width: 66px;
 	height: 66px;
+	cursor: pointer;
 }
 
 .slick-next {
 	border-radius: 0px 3px 0px 0px;
 	left: 559px;
 	position: absolute;
+	
 }
 
 .slick-prev {
@@ -57,9 +59,23 @@ body {
 }
 
 .hidden {
-	display: none;
+	display: none !important;
 }
 
+.show {
+	display: block;
+}
+
+.fade{
+	animation-name: fade;animation-duration: 1.5s;
+}
+@keyframes fade{
+	from{
+		opacity: 0.1;
+	}to {
+		opacity: 1;
+	}
+}
 
 
 
