--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -174,10 +174,16 @@ body {
         width: 150px;
         margin-top: 34px;
         border: 2px solid $yellow;
+        color: $default;
         padding: 14px 31px;
         font-size: 16px;
         text-align: center;
         text-transform: uppercase;
+        transition: all 0.5s;
+        &:hover {
+            background-color: $yellow;
+            color: #fff
+        }
     }
     &__slider {
         position: absolute;
@@ -194,6 +200,7 @@ body {
 
 .offers {
     margin-top: -150px;
+    padding-bottom: 131px;
     &__btns {
         
         display: flex;
@@ -209,6 +216,7 @@ body {
         border-right: 1px solid rgba(244, 176, 43, 0.26);
         z-index: 99;
         cursor: pointer;
+        transition: all .5s;
         &:first-child {
             border: none;
             border-radius: 3px 0px 0px 3px;
@@ -217,9 +225,238 @@ body {
             border: none;
             border-radius: 0px 3px 3px 0px;
         }
+        &:hover {
+            color: #fff;
+            background-color: $yellow;
+        }
     }
     &__btn--active {
         color: #fff;
         background-color: $yellow;
+    }
+    &__cards {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    &__card {
+        margin-top: 30px;
+        margin-right: 30px;
+        width: 350px;
+        position: relative;
+        min-height: 168px;
+        &:nth-child(3), &:nth-child(6) {
+            margin-right: 0;
+        }
+    }
+    &__card-image {
+        min-height: 168px;
+    }
+    &__card-inner {
+        position: absolute;
+        top: 30px;
+        left: 28px;
+        display: flex;
+        justify-content: space-between;
+    }
+    &__card-title {
+        color: #fff;
+        font-size: 22px;
+        line-height: 23px;
+        font-weight: 700;
+        width: 146px;
+    }
+    &__card-btn {
+        margin-top: 12px;
+        color: #fff;
+        text-transform: uppercase;
+        background-color:rgba(255, 255, 255, 0.11);
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(10px);
+        border-radius: 5px;
+        padding: 13px 21px;
+        font-size: 14px;
+        line-height: 17px;
+        font-weight: 500;
+        cursor: pointer;
+        transition: all .5s;
+        &:hover {
+            background-color:rgba(255, 255, 255, 0);
+        }
+    }
+    &__card-price {
+        color: #fff;
+        background-image: url('../images/offers-bg-book.svg');
+        position: absolute;
+        right: -150px;
+        top: -30px;
+        height: 59px;
+        width: 43px;
+    }
+    &__card-pricetitle {
+        margin-top: 16px;
+        text-align: center;
+        font-size: 16px;
+        line-height: 16px;
+        font-weight: 700;
+    }
+}
+
+.leveling {
+    padding: 54px 0;
+    background-image: url('../images/leveling-bg.png');
+    background-position-x: center;
+    min-height: 648px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-y: center;
+    color: #fff;
+    font-weight: 700;
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+    }
+    &__text {
+        display: flex;
+        flex-direction: column;
+    }
+    &__pretitle {
+        font-size: 16px;
+        line-height: 16px;
+        font-weight: 700;
+    }
+    &__title {
+        font-size: 80px;
+        line-height: 82px;
+        max-width: 466px;
+        margin-top: 14px;
+    }
+    &__subtitle {
+        font-size: 20px;
+        font-weight: 500;
+        margin-top: 18px;
+    }
+    &__price-old {
+        font-size: 45px;
+        line-height: 46px;
+        margin-top: 160px;
+        text-decoration: line-through;
+    }
+    &__price-actual {
+        font-size: 77px;
+        line-height: 79px;
+        color: $yellow;
+        margin-top: 18px;
+    }
+    &__timer {
+        min-width: 481px;
+        background: rgba(255, 255, 255, 0.06);
+        box-shadow: 0px 0px 0px rgba(255, 255, 255, 0.01);
+        border-radius: 5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding-top: 38px;
+        padding-bottom: 57px;
+        padding-left: 58px;
+    }
+    &__timer-title {
+        text-transform: uppercase;
+        font-size: 16px;
+    }
+    &__timer-block {
+        color: $yellow;
+        text-transform: uppercase;
+        font-size: 55px;
+        span {
+            color: #fff;
+        }
+    }
+}
+
+.products {
+    padding: 112px 0 104px;
+    &__title {
+        font-size: 60px;
+        line-height: 62px;
+    }
+    &__inner {
+        margin-top: 50px;
+        display: flex;
+        flex-wrap: wrap;
+        
+    }
+    &__card{
+        margin-right: 15px;
+        position: relative;
+        margin-bottom: 15px;
+        max-width: 266px;
+        color: #fff;
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+    &__image {
+        min-height: 327px;
+        border-radius: 5px;
+    }
+    &__card-inner {
+        position: absolute;
+        top: 23px;
+        left: 21px;
+    }
+    &__card-title {
+        font-size: 25px;
+        font-weight: 700;
+    }
+    &__list {
+        margin-top: 9px;
+    }
+    &__item {
+        font-size: 12px;
+        font-weight: 500;
+        position: relative;
+        padding-left: 11px;
+        &::before {
+            content: '';
+            position: absolute;
+            top: 8px;
+            left: 0;
+            height: 5px;
+            width: 5px;
+            background-color: $yellow;
+            border-radius: 50%;
+        }
+    }
+    &__cost {
+        margin-top: 150px;
+        display: flex;
+        justify-content: space-between;
+    }
+    &__cost-price {
+        flex-direction: column;
+    }
+    &__cost-title {
+        font-size: 16px;
+        text-transform: uppercase;
+        font-weight: 500;
+    }
+    &__cost-actual {
+        font-size: 23px;
+        font-weight: 700;
+    }
+    &__link {
+        margin-right: 21px;
+        background-color: $yellow;
+        text-transform: uppercase;
+        font-size: 11px;
+        line-height: 14px;
+        padding: 15px 0;
+        width: 103px;
+        text-align: center;
+        color: #fff;
+        border-radius: 5px;
     }
 }
