--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,105 +1,334 @@
-@media(max-width: 1400px){
-    .container {
-        width: 1140px;
+@media (max-width: 1400px) {
+  .container {
+    width: 1140px;
+  }
+  .promo {
+    &__slider {
+      max-width: 660px;
     }
-    .promo {
-        &__slider {
-            max-width: 660px;
-        }
-    }
+  }
 }
 
-@media(max-width: 1200px){
-    .container {
-        width: 960px;
+@media (max-width: 1200px) {
+  .container {
+    width: 960px;
+  }
+  .promo {
+    flex-wrap: wrap;
+    justify-content: center;
+    &__title {
+      max-width: 100%;
+      text-align: center;
     }
-    .promo {
-        flex-wrap: wrap;
-        justify-content: center;
-        &__title {
-            max-width: 100%;
-            text-align: center;
-        }
-        &__text {
-            margin: 23px auto 0 auto;
-            text-align: center;
-        }
-        &__link {
-            margin: 34px auto 0 auto;
-        }
-        &__slider {
-            margin-top: 30px;
-        }
+    &__text {
+      margin: 23px auto 0 auto;
+      text-align: center;
     }
-    .offers{
-        &__inner {
-            margin-top: 50px;
-        }
-        &__btn {
-            font-size: 18px;
-        }
-        &__card:nth-child(3), &__card:nth-child(6) {
-            margin-right: 30px;
-        }
+    &__link {
+      margin: 34px auto 0 auto;
     }
-    .products {
-        &__inner {
-            justify-content: center;
-        }
+    &__slider {
+      margin-top: 30px;
     }
+  }
+  .offers {
+    &__inner {
+      margin-top: 50px;
+    }
+    &__btn {
+      font-size: 18px;
+    }
+    &__card:nth-child(3),
+    &__card:nth-child(6) {
+      margin-right: 30px;
+    }
+  }
+  .products {
+    &__inner {
+      justify-content: center;
+    }
+  }
 }
 
-@media(max-width: 992px){
-    .container {
-        width: 720px;
-    }
+@media (max-width: 992px) {
+  .container {
+    width: 720px;
+  }
 
-    .header {
-        position: relative;
-        // &__inner {
-        //     position: relative;
-        // }
-        // &__menu {
-        //     position: relative;
-        // }
-        &__list {
-            flex-direction: column;
-            position: absolute;
-            z-index: 999;
-            top: 0;
-            left: 50%;
-            background-color: rgba(0,0,0,.4);
-            width: 250px;
-            height: 300px;
-            transform: translateY(-1000%);
-        }
-        &__item {
-            text-align: center;
-            margin-right: 0;
-            margin-bottom: 10px;
-        }
-        &__item-link{
-            color: #fff 
-        }
-        &__checkin-list{
-            right: 22%;
-            top: 29px;
-            position: absolute;
-            z-index: 999;
-            transform: translateY(-1000%);
-        }
-        &__humburger, &__humburger-close {
-            width: 40px;
-            position: absolute;
-            right: 50px;
-            top: 10px;
-        }
-        &__humburger-close {
-            top: 2px;
-            display: none;
-        }
-        .show_tr {
-            transform: translateY(0);
-        }
+  .header {
+    position: relative;
+    // &__inner {
+    //     position: relative;
+    // }
+    // &__menu {
+    //     position: relative;
+    // }
+    &__list {
+      flex-direction: column;
+      position: absolute;
+      z-index: 999;
+      top: 0;
+      left: 50%;
+      background-color: rgba(0, 0, 0, 0.4);
+      width: 250px;
+      height: 300px;
+      transform: translateY(-1000%);
     }
+    &__item {
+      text-align: center;
+      margin-right: 0;
+      margin-bottom: 10px;
+    }
+    &__item-link {
+      color: #fff;
+    }
+    &__checkin-list {
+      right: 22%;
+      top: 29px;
+      position: absolute;
+      z-index: 999;
+      transform: translateY(-1000%);
+    }
+    &__humburger,
+    &__humburger-close {
+      width: 40px;
+      position: absolute;
+      right: 50px;
+      top: 10px;
+      display: block;
+    }
+    &__humburger-close {
+      top: 2px;
+      display: none;
+    }
+    .show_tr {
+      transform: translateY(0);
+    }
+  }
+  .leveling {
+    &__inner {
+      flex-wrap: wrap;
+    }
+    &__timer {
+      margin-top: 20px;
+    }
+    &__timer-title {
+      margin-bottom: 50px;
+    }
+    &__timer-block {
+      margin-bottom: 50px;
+    }
+  }
+  .products {
+    &__card {
+      &:last-child {
+        margin-right: 15px;
+      }
+    }
+    &__title {
+      text-align: center;
+    }
+  }
+  .subscribe {
+    &__inner {
+      justify-content: center;
+    }
+    &__img-block {
+      display: none;
+    }
+  }
+  .advantages {
+    &__block {
+      margin-right: 0;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: 540px;
+  }
+  .promo {
+    &__slider {
+      max-width: 570px;
+    }
+  }
+  .offers {
+    &__btns {
+      flex-wrap: wrap;
+    }
+    &__btn {
+      width: 100%;
+    }
+  }
+  .subscribe {
+    &__title {
+      font-size: 69px;
+    }
+    &__subtitle {
+      text-align: center;
+    }
+  }
+  .form-input {
+    width: 255px;
+  }
+
+  .subscribe .container {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .advantages {
+    &__inner {
+      flex-wrap: wrap;
+    }
+    &__block {
+      margin-bottom: 70px;
+    }
+  }
+  .footer {
+    &__form {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+    }
+    &__title {
+      text-align: center;
+    }
+    .form-input {
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+      &::placeholder {
+        text-align: center;
+      }
+    }
+    .form-btn {
+      width: 255px;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+  }
+}
+
+@media (max-width: 576px) {
+  .container {
+    width: auto;
+  }
+  .header {
+    &__list {
+      left: 10%;
+    }
+    &__humburger,
+    &__humburger-close {
+      right: 5px;
+    }
+    &__checkin-list {
+      top: 62px;
+    }
+    &__inner {
+      justify-content: center;
+    }
+  }
+  .promo {
+    &__title {
+      font-size: 60px;
+      line-height: 60px;
+    }
+    &__slider {
+      width: 300px;
+      margin-bottom: 100px;
+    }
+    .slick-prev {
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: 20px;
+    }
+    .slick-next {
+      left: 183px;
+      bottom: 20px;
+    }
+  }
+  .offers {
+    &__card {
+      margin-right: 0;
+      &:nth-child(3),
+      &:nth-child(6) {
+        margin-right: 0;
+      }
+    }
+    &__card-price {
+      right: -105px;
+    }
+  }
+  .leveling {
+    &__title {
+      font-size: 50px;
+      line-height: 50px;
+    }
+    &__timer {
+      padding-left: 20px;
+      min-width: 100%;
+    }
+    &__timer-block {
+      font-size: 35px;
+      margin-bottom: 30px;
+    }
+  }
+  .products {
+    &__title {
+      font-size: 40px;
+      line-height: 40px;
+    }
+    &__card {
+      margin-right: 0;
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+  .subscribe {
+    &__title {
+      font-size: 40px;
+      text-align: center;
+    }
+    &__form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .form-input {
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+    .form-btn {
+      width: 255px;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+      margin-left: 1px;
+    }
+  }
+  .advantages {
+    &__title {
+      font-size: 40px;
+      line-height: 40px;
+    }
+  }
+  .footer {
+    &__wrapper {
+      flex-direction: column;
+      align-items: center;
+    }
+    &__title {
+      margin-top: 40px;
+    }
+    &__item {
+      text-align: center;
+    }
+    &__bottom {
+      flex-direction: column;
+      align-items: center;
+    }
+    &__payment {
+      margin-top: 30px;
+    }
+  }
 }
